# FePlot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tags
Code/: CVDataPlot.py  CVPlotter.py  CapacitancePlot.py  EnduDataPlot.py  EnduPlotter.py  Endurance.ipynb  EndurancePlot.py  FerroelectricityAnalysis.ipynb  MasterScript.py  PEPlot.py  PUNDPlot.py  PUNDPlotter.py  PyroPlot.py  UniCVPlotter.py  test.py
Code/Cleaning/: EnduPUNDClean.sh  PUNDClean.sh  PyroClean.sh  UniCVClean.sh
Code/Refactor/: main.py
Measurements/: CVClean.sh  EnduClean.sh  EnduranceClean.sh  PUNDClean.sh  PyroClean.sh  SingleEndu.sh  SinglePUND.sh
RawData/B1500A/: ENDUR TEST.xtd  Endurance 2.5V.xpg  Endurance 2V.xpg  Endurance 3V.xpg  PUND.xpg
RawData/Measurements/HZO5nmTiN/: Break of oxide [HZO5nmTiN_1_25um_D1(1) ; 2021-06-10 09_21_55].csv  Break of oxide [HZO5nmTiN_1_25um_D11(1) ; 2021-06-10 09_06_24].csv  Break of oxide [HZO5nmTiN_2_25um_D11(4) ; 2021-06-10 09_32_39].csv  Break of oxide [HZO5nmTiN_3_25um_D1(3) ; 2021-06-10 10_39_03].csv  Break of oxide [HZO5nmW_1_25um_E13(1) ; 2021-06-10 10_54_41].csv  (+79 more)
RawData/System Volume Information/: IndexerVolumeGuid
Thesis/: MasterThesis.aux  MasterThesis.bbl  MasterThesis.bib  MasterThesis.blg  MasterThesis.docx  MasterThesis.fdb_latexmk  MasterThesis.fls  MasterThesis.tex  MasterThesis.toc  tags
data/InAsFlashIntC/: SampleIndex.txt
old_code/: EnduDataPlot.py  EnduPlotter.py  EndurancePlot.py  MasterScript.py
old_code/Cleaning/: CVClean.sh  SingleEndu.sh
src/: __main__.py
src/feplot/: __main__.py  feplot.py  pund.py  pyro.py
tests/: test_main.py
thesis/: Exjobbreport.aux  Exjobbreport.bbl  Exjobbreport.bib  Exjobbreport.blg  Exjobbreport.fdb_latexmk  Exjobbreport.fls  Exjobbreport.lof  Exjobbreport.lot  Exjobbreport.run.xml  Exjobbreport.tex  Exjobbreport.toc  MasterThesis.bib  MasterThesis.fdb_latexmk  eitExjobb.cls
(+7342 files in other folders)
