[metadata]
name = MasterThesis
description = Analyse data and produce figures reated to FeFET research.
author = Theodor Blom
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10


[options]
packages =
    package    
install_requires =
    inquirer>=2.9.1
python_requires = >=3.9
package_dir =
    =src
zip_safe = no


[options.extra_require]
testing =
    pytest>=6.0
    
[options.package_data]
package = py.typed
