[metadata]
name = feplot
version = attr: feplot.__version__
description = Analyse data and produce figures related to FeFET research.
author = Theodor Blom
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    feplot    
install_requires=
    matplotlib
    numpy
python_requires = >=3.10
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    
[options.entry_points]
console_scripts =
    feplot = feplot.feplot:main

